# backtrack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: release.mjs
src/: App.tsx  api.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  export.rs  fork.rs  indexer.rs  lib.rs  main.rs  models.rs  scanner.rs  store.rs  terminal.rs  watcher.rs
src-tauri/src/parsers/: claude.rs  codex.rs  mod.rs
src/components/: AiSummary.tsx  CollectionsPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ExportDialog.tsx  FavoriteDialog.tsx  FindBar.tsx  ForkTreeDialog.tsx  ManageDirs.tsx  MessageView.tsx  Reader.tsx  RenameDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  StatsPanel.tsx  SubagentBlock.tsx  Tag.tsx  TerminalModal.tsx  Toast.tsx  TopBar.tsx  icons.tsx  useInSessionFind.ts
