[package]
name = "backtrack"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "backtrack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
trash = "5"
notify = "6"
comrak = "0.29"
# AI 标题概括（可选功能，默认关闭）：复用 Tauri 依赖树已有的 reqwest。
# 用 default-tls（系统 TLS，Tauri 已启用），避免额外拉 rustls 全家桶。
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }

[dev-dependencies]
tempfile = "3"

